--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>I'm a paragraph element</p>
-<a href="https://google.com" target="_blank" title="Go to google">Click me, I am a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>I'm a <b>paragraph</b> <i>element</i></p>
+	<p>Sushi:<br>
+	Food</p>
+	<a href="https://google.com" target="_blank" title="Go to google">Click me, I am a link</a>
+	<img src=img/picture.jpg>
+</body>
+</html>
